[project]
name = "socialblobs"
version = "0.2.0"
description = "Blob-Authenticated Messaging (ERC-8180) — reference implementation"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "py_ecc>=7.0.0",
    "web3>=7.0.0",
    "eth-tester[py-evm]>=0.12.0b1",
    "vyper>=0.4.3",
]

[project.optional-dependencies]
rpc = ["websockets>=12.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
